2004-09-20  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: site chacl broken
	* bugfix: segfault on idle timeout
	* bugfix: remove duplicate flags when changing user flags (closes: #0004)
	* bugfix: no more possible to change user_slots/leech_slots for non-gadmins
	* bugfix: unable to delete file after failed upload (closes: #0008)
	* bugfix: free space is taken from drive c: (closes: #0001, #0009)
	* feature: site chmod now accepts string version of permissions

2004-09-13  Pierre Chifflier  <pollux@cpe.fr>

	* feature: GnuTLS support
	* feature: KILLPATH, site, perl and tcl (kill all users inside given directory)
	* IMPORTANT: wzd.cfg and users files renamed to .sample

2004-09-08  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: wzdftpd broken on debian arm, ppc and s390 (Thanks to zentor)
	* bugfix: missing va_end when using va_start
	* bugfix: site grpadd and grpdel not working
	* bugfix: site change group without arg cause segfault
	* bugfix: site purge broken
	* bugfix: misc important problems in backend plaintext
	* bugfix: ip *@* not working

2004-08-31  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: segfault when deleting symlink with non-existent target
	* bugfix: uptime display broken
	* feature: added patch from Tobias Bengtsson to allow group members of
	gid=0 to get siteop access using PAM backend.
	* cookies: %usertime (time online for this session)

2004-08-28  Roman Bogorodskiy <bogorodskiy@inbox.ru>
	
	* bugfix: fix build on FreeBSD 4.x

2004-08-25  Pierre Chifflier  <pollux@cpe.fr>

	* --- cvs commit TAG: rel-0-4-0

	* bugfix: changed EPSV reply code to 229 (to be RFC-compliant)
	* bugfix: avoid segfault on freebsd when kernel has no shm support

2004-08-14  Pierre Chifflier  <pollux@cpe.fr>

	* feature: some code audit using splint. Fixed some warnings
	* feature: tcl/perl: vfs remove -r
	* feature: config option data_buffer_length
	* feature: flag K (enforce TLS data connections)